--- a/recipes/three-ingredient-mango-ice-cream.html
+++ b/recipes/three-ingredient-mango-ice-cream.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>3 Ingredient Mango Ice Cream</h1>
-        <img src="/img/3-Ingredient-Mango-Ice-Cream.jpg" alt="Three ingredient Mango Ice Cream">
+        <img src= "../img/3-Ingredient-Mango-Ice-Cream.jpg" alt="Three ingredient Mango Ice Cream">
         <h2>Description</h2>
         <p>This 3 ingredient mango ice cream is no-churn and can be made in an ice cream maker
              such as the Ninja CREAMi or just poured into a freezer safe container. How easy can it get?</p>
