--- a/recipes/three-ingredient-mango-ice-cream.html
+++ b/recipes/three-ingredient-mango-ice-cream.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>3 Ingredient Mango Ice Cream</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>3 Ingredient Mango Ice Cream</h1>
         <img src= "../img/3-Ingredient-Mango-Ice-Cream.jpg" alt="Three ingredient Mango Ice Cream">
         <h2>Description</h2>
         <p>This 3 ingredient mango ice cream is no-churn and can be made in an ice cream maker
-             such as the Ninja CREAMi or just poured into a freezer safe container. How easy can it get?</p>
+              or just poured into a freezer safe container. How easy can it get?</p>
         <h3>Ingredients</h3>
         <ul>
             <li>1.5 cups mango puree </li>
@@ -20,8 +21,8 @@
         <ol>
             <li>Peel and dice mangoes. Place in a blender and blend until pureed; measure out 1.5 cups puree; set aside. Refrigerate remaining puree for another use</li>
             <li>Whip heavy cream and sugar with an electric mixer on high speed until soft peaks form. Reduce the mixer speed to low and mix in mango purer.</li>
-            <li>Pour into Ninja® CREAMi™ containers or into a freezer-safe bowl. Freeze for 24 hours if using Ninja® CREAMi™ or for 8 hours to overnight if freezing in a container.</li>
-            <li>Following manufacturers instructions, insert the pint container into the outer bowl of Ninja® CREAMi™. Push “Ice Cream” button. If freezing in a container, remove from the freezer and let sit for 8 to 10 minutes or until soft enough to scoop.</li>
+            <li>Pour into a freezer-safe bowl. Freeze for 8 hours to overnight if freezing in a container.</li>
+            <li> Remove from the freezer and let sit for 8 to 10 minutes or until soft enough to scoop.</li>
         </ol>
     </body>
 </html>
