--- a/recipes/tres-leches-pancakes.html
+++ b/recipes/tres-leches-pancakes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tres Leches Pancakes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Tres Leches Pancakes</h1>
