--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="img/recipe-book.jpg" alt="recipe book photo">
     <ul>
     <li><a href="./recipes/lasagna.html">Lasagna</a></li>
     <li><a href = "./recipes/three-ingredient-mango-ice-cream.html">3 Ingredient Ice Cream/a></li>
