--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="img/recipe-book.jpg" alt="recipe book photo">
     <ul>
     <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-    <li><a href = "./recipes/three-ingredient-mango-ice-cream.html">3 Ingredient Ice Cream/a></li>
+    <li><a href = "./recipes/three-ingredient-mango-ice-cream.html">3 Ingredient Ice Cream</a></li>
     <li><a href="./recipes/tres-leches-pancakes.html">Tres Leches Pancakes</a></li>
     </ul>
 </body>
