Centred heading and added classes to descriptions
centred heading levels h1, h2 and h3 and underlined them. Added "description"
class to descriptions and centred them with css.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <h1>Lasagna</h1>
     <img src="../img/image.jpg" alt="Photo of finished lasagna">
     <h2>Description</h2>
-    <p>When John Chandler submitted this lasagna recipe to 
+    <p class="description">When John Chandler submitted this lasagna recipe to 
         "Allrecipes" more than 20 years ago, 
         he had no idea how successful it would become. 
         One of our top-performing recipes of all time, 
