--- a/recipes/three-ingredient-mango-ice-cream.html
+++ b/recipes/three-ingredient-mango-ice-cream.html
@@ -9,7 +9,7 @@
         <h1>3 Ingredient Mango Ice Cream</h1>
         <img src= "../img/3-Ingredient-Mango-Ice-Cream.jpg" alt="Three ingredient Mango Ice Cream">
         <h2>Description</h2>
-        <p>This 3 ingredient mango ice cream is no-churn and can be made in an ice cream maker
+        <p class="description">This 3 ingredient mango ice cream is no-churn and can be made in an ice cream maker
               or just poured into a freezer safe container. How easy can it get?</p>
         <h3>Ingredients</h3>
         <ul>
