--- a/recipes/tres-leches-pancakes.html
+++ b/recipes/tres-leches-pancakes.html
@@ -9,7 +9,7 @@
     <h1>Tres Leches Pancakes</h1>
     <img src="../img/Tres-Leches-Pancakes.jpg" alt="Tres Leches Pancakes Image">
     <h2>Description</h2>
-    <p>These tres leches pancakes are a mouthwatering and easy way to combine your love for tres leches cake with light and fluffy pancakes. They're indulgent, but perfect for a special occasion, upscale breakfast, or brunch.</p>
+    <p class="description">These tres leches pancakes are a mouthwatering and easy way to combine your love for tres leches cake with light and fluffy pancakes. They're indulgent, but perfect for a special occasion, upscale breakfast, or brunch.</p>
     <h3>Ingredients</h3>
     <h4>Sauce</h4>
     <ul>
